@@ -32,7 +32,7 @@ import org.gjt.sp.jedit.*;
 /**
  * A container for dockable windows. This class should never be used
  * directly.
- * @version $Id: FloatingWindowContainer.java,v 1.16 2003/05/07 22:40:00 spestov Exp $
+ * @version $Id: FloatingWindowContainer.java,v 1.17 2004/03/19 22:42:21 spestov Exp $
  * @since jEdit 4.0pre1
  */
 public class FloatingWindowContainer extends JFrame implements DockableWindowContainer
@@ -74,6 +74,7 @@ public class FloatingWindowContainer extends JFrame implements DockableWindowCon
 	//{{{ remove() method
 	public void remove(DockableWindowManager.Entry entry)
 	{
+		entry.container = null;
 		dispose();
 	} //}}}
 
