@@ -38,7 +38,7 @@ import org.gjt.sp.jedit.*;
  * A container for dockable windows. This class should never be used
  * directly.
  * @author Slava Pestov
- * @version $Id: PanelWindowContainer.java,v 1.75 2004/02/22 20:00:53 spestov Exp $
+ * @version $Id: PanelWindowContainer.java,v 1.76 2004/03/19 22:42:21 spestov Exp $
  * @since jEdit 4.0pre1
  */
 public class PanelWindowContainer implements DockableWindowContainer
@@ -145,6 +145,7 @@ public class PanelWindowContainer implements DockableWindowContainer
 		{
 			wm.revalidate();
 			dockablePanel.repaint();
+			buttonPanel.repaint();
 		}
 	} //}}}
 
